Fix overflow and overlay issue in modals for Portfolio component

--- a/content/assets/stylesheets/_global.scss
+++ b/content/assets/stylesheets/_global.scss
@@ -62,3 +62,8 @@ body {
 .regular-red {
   color: $regular-red;
 }
+
+// React Modal
+.ReactModal__Body--open {
+  overflow: hidden;
+}
